--- a/bmall-merchant/src/main/resources/templates/layout.html
+++ b/bmall-merchant/src/main/resources/templates/layout.html
@@ -13,6 +13,7 @@
 		<![endif]-->
 		<link rel="stylesheet" href="/assets/css/ace-skins.min.css" />
 		<link rel="stylesheet" href="/assets/css/ace-rtl.min.css" />
+		<link rel="stylesheet" href="/css/sweet-alert.css" />
 		<!--[if lte IE 9]>
 		  <link rel="stylesheet" href="/assets/css/ace-ie.min.css" />
 		<![endif]-->
@@ -37,6 +38,7 @@
 		<![endif]-->
 		<script src="/assets/js/ace.min.js"></script>
 		<script src="/js/handlebars.min.js"></script>
+		<script src="/js/sweet-alert.min.js"></script>
 	</head>
 
 	<body class="no-skin">
