--- a/bmall-merchant/src/main/resources/templates/product/category-list.html
+++ b/bmall-merchant/src/main/resources/templates/product/category-list.html
@@ -3,43 +3,52 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorate="~{layout.html}">
 <head>
- <link rel="stylesheet" href="/css/myPagination.css" type="text/css"/>
  <link rel="stylesheet" href="/assets/css/bootstrap-datetimepicker.css"/>
- <script type="text/javascript" src="/js/myPagination.js"></script>
- <script type="text/javascript" src="/js/page.js?v=0.0.1"></script>
  <script src="/assets/laydate/laydate.js" type="text/javascript"></script>
- <script src="/js/m.js" type="text/javascript"></script>
 </head>
 <div class="page-content" layout:fragment="content" seq="13">
+<script type="text/javascript">
+var $curs = {};
+$(function() {
+	var param = {};
+	query(param);
+});
+function query(params) {
+	$curs = params;
+	$.ajax({
+		type : "GET",
+		url : "/category/listData",
+		data : params,
+		dataType : 'json',
+		success : function(result) {
+			$('#myData').empty();
+			var template = Handlebars.compile($("#dataTemplate").html());
+			var $tr = template(result.data);
+			$('#myData').append($tr);
+		}
+	});
+}
+
+function toIndex(id){
+	window.location.href="/category/editCategoryView/"+id;
+}
+</script>
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="table-responsive">
 				<div id="sample-table-2_wrapper" class="dataTables_wrapper">
-					<form class="form-horizontal" id="searchForm" url="/category/listData">
-                       <div class="form-group">
-                          <label class="col-sm-1 control-label">分类名称：</label>
-                          <div class="col-sm-2">
-                             <input class="form-control" name="name" type="text" />
-                          </div>
-                           <label class="col-sm-1 control-label">创建时间：</label>
-							<div class="col-sm-3">
-								<div class="input-daterange input-group">
-									<input type="text" class="form-control time-item"  name="start">
-									<span class="input-group-addon"> <i
-										class="fa fa-exchange"></i>
-									</span>
-									<input style="margin: 0px; padding: 0px;border-left:0px;" type="text" class="form-control time-item" name="end" >
-								</div>
-							</div>
+					<div class="form-horizontal">
+						<div class="form-group">
 							<div class="col-sm-2">
 								<div class="col-sm-5">
-									<span class="btn btn-info btn-sm tooltip-info" onclick="startQuery()">查询
-										<i class="ace-icon fa fa-search"></i>
-									 </span>
+									<span class="btn btn-info btn-sm tooltip-info"
+										onclick="toIndex(0)">新增 <i
+										class="ace-icon fa icon-plus"></i>
+									</span>
 								</div>
 							</div>
 						</div>
-                </form>
+					</div>
 					<table id="sample-table-2"
 						class="table table-striped table-bordered table-hover dataTable"
 						aria-describedby="sample-table-2_info">
@@ -48,31 +57,57 @@
 								<th>序号</th>
 								<th>分类名</th>
 								<th>状态</th>
-								<th>创建时间</th>
 								<th>操作</th>
 							</tr>
 						</thead>
 						<tbody  id="myData">
 						</tbody>
 					</table>
-					<div class="row">
-						  <div id="pagination" class="pagination"></div>
-					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 <script id="dataTemplate" type="text/x-handlebars-template">
-{{#each records}}
-   <tr>
-  <td>{{addOne   @index }}</td>
-  <td>{{name}}</td> 
-  <td>{{state}}</td> 
-  <td>{{createTime}}</td>  
-  <td>查看</td>                
+{{#each this}}
+  <tr>
+     <td>{{addOne   @index}}</td>
+     <td>{{name}}</td>
+     <td>{{#if_eq state 'ENABLE'}}
+          <span class="label label-success radius">启用</span>
+          {{/if_eq}}  
+          {{#if_eq state 'DISABLE'}}
+          <span class="label label-warning radius">禁用 </span> 
+          {{/if_eq}} </td>
+     <td>编辑 禁用</td>
  </tr>
+  {{#each list}}
+   <tr>
+     <td></td>
+     <td>—{{name}}</td>
+     <td>{{#if_eq state 'ENABLE'}}
+          <span class="label label-success radius">启用</span>
+          {{/if_eq}}  
+          {{#if_eq state 'DISABLE'}}
+          <span class="label label-warning radius">禁用 </span> 
+          {{/if_eq}} </td>
+     <td>编辑 禁用</td>
+ </tr>
+   {{#each list}}
+     <tr>
+     <td></td>
+     <td>— —{{name}}</td>
+     <td>{{#if_eq state 'ENABLE'}}
+          <span class="label label-success radius">启用</span>
+          {{/if_eq}}  
+          {{#if_eq state 'DISABLE'}}
+          <span class="label label-warning radius">禁用 </span> 
+          {{/if_eq}} </td>
+     <td>编辑 禁用</td>
+      </tr>
+   {{/each}}
 {{/each}}
- </script>	
+{{/each}}
+ </script>
 </div>
 </html>
