--- a/bmall-merchant/src/main/resources/templates/layout.html
+++ b/bmall-merchant/src/main/resources/templates/layout.html
@@ -39,6 +39,8 @@
 		<script src="/assets/js/ace.min.js"></script>
 		<script src="/js/handlebars.min.js"></script>
 		<script src="/js/sweet-alert.min.js"></script>
+		<script src="/js/ajaxSub.js"></script>
+		<script src="/js/bootbox.min.js"></script>
 	</head>
 
 	<body class="no-skin">
