--- a/bmall-merchant/src/main/resources/templates/product/category-edit.html
+++ b/bmall-merchant/src/main/resources/templates/product/category-edit.html
@@ -5,7 +5,6 @@
 <head>
  <link rel="stylesheet" href="/dist/css/bootstrapValidator.css" type="text/css"/>
  <script type="text/javascript" src="/dist/js/bootstrapValidator.js"></script>
-  <script type="text/javascript" src="/js/ajaxSub.js"></script>
 </head>
 <div class="page-content" layout:fragment="content" seq="13">
 <SCRIPT th:inline="javascript">
@@ -57,7 +56,7 @@
  
 	});
 	 function backUrl(){
-		 window.location.href="/category/listView";
+		 window.history.back();
 	 }
    </script>
    <div class="row">
