--- a/bmall-merchant/src/main/resources/templates/layout.html
+++ b/bmall-merchant/src/main/resources/templates/layout.html
@@ -37,6 +37,7 @@
 		  <script src="/assets/js/excanvas.min.js"></script>
 		<![endif]-->
 		<script src="/assets/js/ace.min.js"></script>
+		<script src="/assets/js/ace-extra.min.js"></script>
 		<script src="/js/handlebars.min.js"></script>
 		<script src="/js/sweet-alert.min.js"></script>
 		<script src="/js/ajaxSub.js"></script>
