--- a/bmall-merchant/src/main/resources/templates/product/props-list.html
+++ b/bmall-merchant/src/main/resources/templates/product/props-list.html
@@ -1,4 +1,88 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorate="~{layout.html}">
-<div class="page-content" layout:fragment="content" seq="14"></div>
+<html lang="en"
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	layout:decorate="~{layout.html}">
+<head>
+ <link rel="stylesheet" href="/css/myPagination.css" type="text/css"/>
+ <link rel="stylesheet" href="/assets/css/bootstrap-datetimepicker.css"/>
+ <script type="text/javascript" src="/js/myPagination.js"></script>
+ <script type="text/javascript" src="/js/page.js?v=0.0.1"></script>
+ <script src="/assets/laydate/laydate.js" type="text/javascript"></script>
+ <script src="/js/m.js" type="text/javascript"></script>
+</head>
+<div class="page-content" layout:fragment="content" seq="14">
+ <script type="text/javascript">
+     function toIndex(id){
+    	  window.location.href="/props/editPropsView/"+id;
+     }
+ </script>
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="table-responsive">
+				<div id="sample-table-2_wrapper" class="dataTables_wrapper">
+					<form class="form-horizontal" id="searchForm" url="/props/listData">
+                       <div class="form-group">
+                          <label class="col-sm-1 control-label">名称：</label>
+                          <div class="col-sm-2">
+                             <input class="form-control" name="name" type="text" />
+                          </div>
+                          <label class="col-sm-1 control-label">分类：</label>
+                          <div class="col-sm-2">
+                             <input class="form-control" type="text"/>
+                          </div>
+                          	<div class="col-sm-1">
+								<div class="col-sm-5">
+									<span class="btn btn-info btn-sm tooltip-info" onclick="startQuery()">查询
+										<i class="ace-icon fa fa-search"></i>
+									 </span>
+								</div>
+							</div>
+							<div class="col-sm-1">
+								<div class="col-sm-2">
+									<span class="btn btn-info btn-sm tooltip-info"
+										onclick="toIndex(0)">新增 <i
+										class="ace-icon fa icon-plus"></i>
+									</span>
+								</div>
+							</div>
+                     </div>
+                </form>
+					<table id="sample-table-2"
+						class="table table-striped table-bordered table-hover dataTable"
+						aria-describedby="sample-table-2_info">
+						<thead>
+							<tr role="row">
+								<th width="10%">序号</th>
+								<th width="10%">参数名</th>
+								<th width="10%">绑定分类</th>
+								<th width="60%">属性值</th>
+								<th width="10%">操作</th>
+							</tr>
+						</thead>
+						<tbody  id="myData">
+						</tbody>
+					</table>
+					<div class="row">
+						  <div id="pagination" class="pagination"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+<script id="dataTemplate" type="text/x-handlebars-template">
+{{#each records}}
+   <tr>
+  <td>{{addOne   @index }}</td>
+  <td>{{name}}</td>
+  <td>{{categoryId}}</td>  
+  <td>{{data}}</td> 
+  <td> {{#not_eq userId 0}}
+           <a title="编辑" href="javascript:;"  onclick="toIndex({{id}})" class="btn btn-xs btn-success" ><i class="fa fa-check  bigger-120"></i></a>
+       {{/not_eq}}
+  </td>                
+ </tr>
+{{/each}}
+ </script>	
+</div>
 </html>
