--- a/bmall-merchant/src/main/resources/templates/product/attr-list.html
+++ b/bmall-merchant/src/main/resources/templates/product/attr-list.html
@@ -11,53 +11,45 @@
  <script src="/js/m.js" type="text/javascript"></script>
 </head>
 <div class="page-content" layout:fragment="content" seq="15">
+ <SCRIPT th:inline="javascript">
+	var data = [[${listAll}]];
+	$(function (){
+		initCate("cateSelect",data);
+	})
+	function toIndex(id){
+    	  window.location.href="/attr/addAttrView";
+     }
+	function toEdit(id){
+  	  window.location.href="/attr/editAttrView/"+id;
+   }
+ </SCRIPT>
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="table-responsive">
 				<div id="sample-table-2_wrapper" class="dataTables_wrapper">
 					<form class="form-horizontal" id="searchForm" url="/attr/listData">
                        <div class="form-group">
-                          <label class="col-sm-1 control-label">商品名称：</label>
+                          <label class="col-sm-1 control-label">属性名称：</label>
                           <div class="col-sm-2">
                              <input class="form-control" name="name" type="text" />
                           </div>
-                          <label class="col-sm-1 control-label">商品分类：</label>
+                          <label class="col-sm-1 control-label">分类：</label>
                           <div class="col-sm-2">
-                             <input class="form-control" type="text"/>
+                             <select class="form-control" id="cateSelect" name="categoryId"></select>
                           </div>
-                           <label class="col-sm-1 control-label">商品状态：</label>
-                          <div class="col-sm-2">
-                               <select class="form-control">
-                                   <option value="">选择状态</option>
-                                   <option value="0">下架</option>
-                                   <option value="1">上架</option>
-                               </select>
-                          </div>
-                           <label class="col-sm-1 control-label">审核状态：</label>
-                          <div class="col-sm-2">
-                               <select class="form-control">
-                                   <option value="">选择状态</option>
-                                   <option value="0">未审核</option>
-                                   <option value="1">已审核</option>
-                               </select>
-                          </div>
-                     </div>
-                      <div class="form-group">
-                            <label class="col-sm-1 control-label">创建时间：</label>
-							<div class="col-sm-3">
-								<div class="input-daterange input-group">
-									<input type="text" class="form-control time-item"  name="start">
-									<span class="input-group-addon"> <i
-										class="fa fa-exchange"></i>
-									</span>
-									<input style="margin: 0px; padding: 0px;border-left:0px;" type="text" class="form-control time-item" name="end" >
-								</div>
-							</div>
-							<div class="col-sm-2">
+							<div class="col-sm-1">
 								<div class="col-sm-5">
 									<span class="btn btn-info btn-sm tooltip-info" onclick="startQuery()">查询
 										<i class="ace-icon fa fa-search"></i>
 									 </span>
+								</div>
+							</div>
+							<div class="col-sm-1">
+								<div class="col-sm-2">
+									<span class="btn btn-info btn-sm tooltip-info"
+										onclick="toIndex(0)">新增 <i
+										class="ace-icon fa icon-plus"></i>
+									</span>
 								</div>
 							</div>
 						</div>
@@ -67,17 +59,11 @@
 						aria-describedby="sample-table-2_info">
 						<thead>
 							<tr role="row">
-								<th>序号</th>
-								<th>商品名</th>
-								<th>关键词</th>
-								<th>编号</th>
-								<th>价格</th>
-								<th>重量</th>
-								<th>库存</th>
-								<th>商品状态</th>
-								<th>审核状态</th>
-								<th>创建时间</th>
-								<th>操作</th>
+								<th width="10%">序号</th>
+								<th width="10%">名称</th>
+								<th width="10%">分类</th>
+								<th width="60%">可选项</th>
+								<th width="10%">操作</th>
 							</tr>
 						</thead>
 						<tbody  id="myData">
@@ -96,15 +82,12 @@
    <tr>
   <td>{{addOne   @index }}</td>
   <td>{{name}}</td> 
-  <td>{{keywords}}</td> 
-  <td>{{pno}}</td> 
-  <td>{{price}}</td> 
-  <td>{{weight}}</td> 
-  <td>{{stock}}</td> 
-  <td>{{status}}</td> 
-  <td>{{state}}</td>  
-  <td>{{createTime}}</td>  
-  <td>查看</td>                
+  <td>{{categoryId}}</td> 
+  <td>{{data}}</td> 
+  <td>{{#not_eq userId 0}}
+           <a title="编辑" href="javascript:;"  onclick="toEdit({{id}})" class="btn btn-xs btn-success" ><i class="fa fa-edit  bigger-120"></i></a>
+      {{/not_eq}}    
+   </td>                
  </tr>
 {{/each}}
  </script>	
