--- a/bmall-merchant/src/main/resources/templates/product/spec-add.html
+++ b/bmall-merchant/src/main/resources/templates/product/spec-add.html
@@ -7,7 +7,7 @@
  <script type="text/javascript" src="/dist/js/bootstrapValidator.js"></script>
   <script src="/js/m.js" type="text/javascript"></script>
 </head>
-<div class="page-content" layout:fragment="content" seq="15">
+<div class="page-content" layout:fragment="content" seq="16">
 <SCRIPT th:inline="javascript">
      var data = [[${listAll}]];
 	  $(function (){
@@ -53,7 +53,7 @@
 				alert("可选项最多20项");
 				return;
 		 }
-		var items ="<div><input style='margin-bottom: 5px;' class='col-sm-10'  name='data' type='text' /><label class='col-sm-2 control-label no-padding-right'><a href='javascript:;' class='remove' onclick='del(this)'>[删除]</a></label></div>"; 
+		var items ="<div><input style='margin-bottom: 5px;' class='col-sm-10'  name='list' type='text' /><label class='col-sm-2 control-label no-padding-right'><a href='javascript:;' class='remove' onclick='del(this)'>[删除]</a></label></div>"; 
 	   $("#item").append(items);
 	 }
 	 function del(_this){
@@ -69,7 +69,7 @@
    <div class="row">
 			 <div class="col-xs-12">
 								<!-- PAGE CONTENT BEGINS -->
-								<form class="form-horizontal"  action="/attr/addAttrAndValue" method="POST" id="dataForm">
+								<form class="form-horizontal"  action="/spec/addSpecAndValue" method="POST" id="dataForm">
 									<div class="form-group">
 										<label class="col-sm-3 control-label no-padding-right" >名称： </label>
 
@@ -95,13 +95,13 @@
                                     <div class="form-group">
                                            <label class="col-sm-3 control-label no-padding-right">可选项：</label>
 										  <div class="col-sm-4" id="item">
-										      <div><input style="margin-bottom: 5px;" class="col-sm-10"  name="data" type="text" /><label class="col-sm-2 control-label no-padding-right"><a href="javascript:;" class="remove" onclick='del(this)'>[删除]</a></label></div>
+										      <div><input style="margin-bottom: 5px;" class="col-sm-10"  name="list" type="text" /><label class="col-sm-2 control-label no-padding-right"><a href="javascript:;" class="remove" onclick='del(this)'>[删除]</a></label></div>
 										  </div>
                                     </div>
 
 									<div class="clearfix form-actions">
 										<div class="col-md-offset-3 col-md-9">
-											<button th:if="${attr==null}" class="btn btn-info" type="button" id ="subData">
+											<button class="btn btn-info" type="button" id ="subData">
 												<i class="ace-icon fa fa-check bigger-110"></i>
 												立即提交
 											</button>
