--- a/bmall-merchant/src/main/resources/templates/layout.html
+++ b/bmall-merchant/src/main/resources/templates/layout.html
@@ -213,7 +213,7 @@
 								<b class="arrow"></b>
 							</li>
 							<li class="" id="17">
-								<a href="jqgrid.html">
+								<a href="/brand/listView">
 									<i class="menu-icon fa fa-caret-right"></i>
 									品牌管理
 								</a>
