--- a/bmall-merchant/src/main/resources/templates/product/category-edit.html
+++ b/bmall-merchant/src/main/resources/templates/product/category-edit.html
@@ -36,14 +36,7 @@
 	                        message: '分类不能为空'
 	                    }
 	                }
-	            },
-	           pId: {
-                validators: {
-                    notEmpty: {
-                        message: '分类不能为空'
-                    }
-                }
-            }
+	            }
 	        }
 	    });
 	    $('#subData').click(function() {
@@ -97,6 +90,16 @@
 													</label>
 												</div>
 										   </div>
+                                    </div>
+                                    <div class="form-group">
+                                           <label class="col-sm-3 control-label no-padding-right" for="form-field-tags">上级分类：</label>
+										  
+										   <div class="col-sm-9">
+												 <label th:if="${brand!=null}" th:each="b:${brand}" class="col-sm-2" >
+														<input name="brand" type="checkbox" class="ace" th:value="${b.id}">
+														<span class="lbl" th:text="${b.name}"> </span>
+												 </label>
+											 </div>
                                     </div>
 
 									<div class="clearfix form-actions">
