--- a/bmall-merchant/src/main/resources/templates/product/product-add.html
+++ b/bmall-merchant/src/main/resources/templates/product/product-add.html
@@ -5,9 +5,9 @@
 <head>
  <link href="/webuploader-0.1.5/webuploader.css" rel="stylesheet" type="text/css" />
  <script src="/webuploader-0.1.5/webuploader.js" type="text/javascript"></script>
- <script src="/js/m.js?v=0.3" type="text/javascript"></script>
- <script src="/js/ajaxSub.js" type="text/javascript"></script>
- <script src="/js/product.js?v=0.5" type="text/javascript"></script>
+ <script src="/js/m.js?v=0.4" type="text/javascript"></script>
+ <script src="/js/ajaxSub.js?v=0.1" type="text/javascript"></script>
+ <script src="/js/product.js?v=1" type="text/javascript"></script>
  <script src="/assets/js/fuelux/fuelux.wizard.min.js" type="text/javascript"></script>
  <script src="/assets/js/ace-elements.min.js"></script>
  <script type="text/javascript" src="/plugin/ueditor/ueditor.config.js?v=0.6"></script>
@@ -23,12 +23,12 @@
 	var data = [[${category}]];
 	var ue;
 	$(function (){
-		initCate("categoryId",data);
+		initCate("categroyId",data);
 		initUpload("filePicker","fileList","/upload/fileUpload");
 	    $('#step1form').bootstrapValidator({
 	        message: 'This value is not valid',
 	        fields: {
-	        	categoryId: {
+	        	categroyId: {
 	                validators: {
 	                    notEmpty: {
 	                        message: '不能为空'
@@ -55,7 +55,14 @@
 	                        message: '不能为空'
 	                    }
 	                }
-	            } 
+	            },
+	            img: {
+	                validators: {
+	                    notEmpty: {
+	                        message: '不能为空'
+	                    }
+	                }
+	            }
 	        }
 	    });
 	})
@@ -143,23 +150,29 @@
 							params[pArray[i].name] = pArray[i].value;
 						}
 					}
+					var spec=[];
+					$("#step4").find("div[class='form-group']").each(function() {
+						var siz = $(this).find("input:checkbox:checked").length;
+						if (siz > 0) {
+							var data={};
+							data.id=$(this).find("input[type='hidden']").val();
+							data.arry=[];
+							$(this).find("input:checkbox:checked").each(function(j) {
+								data.arry[j]= $(this).val();
+							});
+							spec.push(data);
+						}
+						
+					})
+					
 					var subdata = {};
 					subdata.form1 = params;
 					subdata.form2 = datas;
 					subdata.form3 = step3datas;
 					subdata.form4 = step4datas;
 					subdata.form5 = window.editor.text();
-					console.log(subdata);
-					bootbox.dialog({
-						message: "您的商品已添加成功，等待审核", 
-						buttons: {
-							"success" : {
-								"label" : "确定并关闭",
-								"className" : "btn-sm btn-primary"
-							}
-						}
-					});
-					
+					subdata.form6 = spec;
+					dataSubmitJSON("/product/addProduct",JSON.stringify(subdata));
 				}).on('stepclick', function(e){
 					//e.preventDefault();//this will prevent clicking and selecting steps
 				});
@@ -227,7 +240,7 @@
 
 															<div class="col-xs-12 col-sm-9">
 																<div class="clearfix">
-																	 <select class="col-xs-12 col-sm-3" id="categoryId" name="categoryId"></select>
+																	 <select class="col-xs-12 col-sm-3" id="categroyId" name="categroyId"></select>
 																</div>
 															</div>
 														</div>
@@ -297,9 +310,8 @@
 
 															<div class="col-xs-12 col-sm-9">
 																<div class="clearfix">
-																	  <div style="padding: 0px;" id="fileList" class="col-sm-1">
-                                                                      <img      name="img" width="50px;" height="40px;">
-                                                                      <input  type="hidden" name="imgPath">
+																	  <div style="padding: 0px;" id="fileList" class="col-sm-3">
+                                                                      <input  type="text" name="img" id="img" readonly="readonly">
                                                                       </div>
 							                                         <div  style="padding: 0px;" id="filePicker" class="col-sm-2">选择</div>
 																</div>
